--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,49 @@
+---
+import { ClientRouter } from "astro:transitions";
+import "../styles/global.css";
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
 		<title>Astro Basics</title>
+		<ClientRouter />
 	</head>
 	<body>
-		<slot />
+		<div>
+			<slot />
+		</div>
 	</body>
 </html>
 
 <style>
-	html,
-	body {
+	
+	html {
+		font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+		background: #13151a;
+		color: #fff;
 		margin: 0;
 		width: 100%;
 		height: 100%;
 	}
+
+	body {
+		@apply container;
+	}
+
+	div {
+		display: grid;
+		width: 100%;
+		grid-template-rows: auto 1fr;
+		align-items: center;
+		justify-items: center;
+		gap: 2em;
+		padding-top: 2em;
+	}
+
+
+
 </style>
