--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,60 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
+import { getCollection } from 'astro:content';
+import "../styles/global.css";
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+const books = await getCollection('books');
+
+export const prerender = true
 ---
 
-<Layout>
-	<Welcome />
+<style>
+	.book-list {
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);;
+		gap: 2em;
+	}
+</style>
+
+<Layout title="Dev Books, libros para programadores">
+	<main class="gap-4 w-full max-w-screen-xl mx-auto">
+		<h1 class="text-center text-7xl font-extrabold">Dev 👩‍💻<br>
+			<span class="block">Books</span></h1>
+	</main>
+
+	<section class= "w-full max-w-screen-xl mx-auto" aria-label="Libros recomendados para programadores">
+		<div class="px-4 w-full mx-auto max-w-screen-xl">
+			<div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+				{
+					books.map(book => {
+						const { slug, data } = book
+						const { title, author, img, readtime, description, buy } = data
+
+						return (
+							<article class="flex w-full p-4 rounded-xl">
+								<a href={`/libro/${slug}`} class="flex-[2] mr-8 shrink-0 transition hover:scale-110">
+									<img
+										transition:name={`img-${slug}`}
+										class="w-full md:w-full rounded-xl" 
+										src={`/${img}`} 
+										alt={title}
+									/>
+								</a>
+
+								<div class="flex-[1] flex-col justify-center">
+									<h2 transition:name={`title-${slug}`} class="mb-2 text-xl md:text-2xl font-bold leading-tight text-white">
+										{title}
+									</h2>
+
+									<p class="mb-4 text-gray-300 max-w-sm">{description}</p>
+									<span class="text-xs">⌛ Lectura en {readtime} minutos</span>
+								</div>
+						
+							</article>
+						)
+					})
+				}
+			</div>
+		</div>
+	</section>
 </Layout>
